KitchenProducerService.Api/k8s/k8s-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kitchen-producer-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /api/KitchenProducer/pendentes
        pathType: Prefix
        backend:
          service:
            name: kitchen-producer-service
            port:
              number: 80
      - path: /api/KitchenProducer/aceitar
        pathType: Prefix
        backend:
          service:
            name: kitchen-producer-service
            port:
              number: 80
      - path: /api/KitchenProducer/rejeitar
        pathType: Prefix
        backend:
          service:
            name: kitchen-producer-service
            port:
              number: 80
      - path: /api/KitchenProducer/pronto
        pathType: Prefix
        backend:
          service:
            name: kitchen-producer-service
            port:
              number: 80
      - path: /kitchen-producer/health
        pathType: Prefix
        backend:
          service:
            name: auth-service
            port:
              number: 80
      - path: /kitchen-producer/metrics
        pathType: Prefix
        backend:
          service:
            name: auth-service
            port:
              number: 80
